--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "stufftodo-cli",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.7.7",
-    "typescript": "^5.6.3"
-  }
+    "name": "stufftodo-cli",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "npx tsc",
+        "start": "node dist/index.js"
+    },
+    "keywords": [],
+    "author": "Philippe DeSousa",
+    "license": "MIT",
+    "description": "Command-line todo app",
+    "devDependencies": {
+        "@types/node": "^22.8.0",
+        "typescript": "^5.6.3"
+    },
+    "dependencies": {
+        "@inquirer/prompts": "^7.0.0"
+    }
 }
